--- a/app/src/main/res/layout/activity_regist.xml
+++ b/app/src/main/res/layout/activity_regist.xml
@@ -154,7 +154,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:orientation="horizontal"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linear4">
