--- a/app/src/main/res/layout/activity_find_idpassword.xml
+++ b/app/src/main/res/layout/activity_find_idpassword.xml
@@ -31,7 +31,14 @@
             android:id="@+id/btn_send"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Send"
+            android:text="SEND"
+            android:textAlignment="center" />
+
+        <Button
+            android:id="@+id/btn_submit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SUBMIT"
             android:textAlignment="center" />
 
         <Button
@@ -42,4 +49,39 @@
             android:textAlignment="center" />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/hidden_layout"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/new_pwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="New password"
+                android:textAlignment="center" />
+
+            <EditText
+                android:id="@+id/new_pwd_confirm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Confirm"
+                android:textAlignment="center" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/finish"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="complete" />
+    </LinearLayout>
 </LinearLayout>
