아이디/비밀번호찾기 완료

--- a/app/src/main/res/layout/activity_find_idpassword.xml
+++ b/app/src/main/res/layout/activity_find_idpassword.xml
@@ -17,9 +17,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Certification Number"
-        android:inputType="textEmailAddress"
+        android:inputType="numberPassword"
         android:textAlignment="center"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -39,6 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="SUBMIT"
+            android:visibility="gone"
             android:textAlignment="center" />
 
         <Button
@@ -51,10 +52,10 @@
 
     <LinearLayout
         android:id="@+id/hidden_layout"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -67,6 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="New password"
+                android:inputType="textPassword"
                 android:textAlignment="center" />
 
             <EditText
@@ -74,11 +76,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Confirm"
+                android:inputType="textPassword"
                 android:textAlignment="center" />
         </LinearLayout>
 
         <Button
-            android:id="@+id/finish"
+            android:id="@+id/btn_complete"
+            android:enabled="false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
