--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -107,9 +107,9 @@
         <Button
             android:id="@+id/btn_login"
             android:layout_width="250dp"
-            android:layout_height="wrap_content"
+            android:layout_height="90dp"
             android:layout_gravity="center"
-            android:text="로그인"
+            android:background="@drawable/login_img"
             android:textSize="30dp" />
     </LinearLayout>
 
