--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:text="로그인"
-        android:id="@+id/to_login_activity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <include layout="@layout/mainpage_custom_title_bar"
+        app:layout_constraintBottom_toTopOf="parent"
+        android:id="@+id/main_titlebar"/>
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/main_pager"
+        app:layout_constraintTop_toBottomOf="@+id/main_titlebar"
+        android:layout_width="match_parent"
+        android:background="#e6e6e6"
+        android:layout_height="200dp">
+    </android.support.v4.view.ViewPager>
 </android.support.constraint.ConstraintLayout>
