--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,9 @@
         android:id="@+id/main_pager"
         app:layout_constraintTop_toBottomOf="@+id/main_titlebar"
         android:layout_width="match_parent"
-        android:background="#e6e6e6"
-        android:layout_height="200dp">
+        android:background="#ece6e6"
+        android:layout_height="142dp">
     </android.support.v4.view.ViewPager>
+
+
 </android.support.constraint.ConstraintLayout>
