--- a/app/src/main/res/layout/mainpage_custom_title_bar.xml
+++ b/app/src/main/res/layout/mainpage_custom_title_bar.xml
@@ -20,6 +20,9 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:layout_centerVertical="true"
         android:background="@drawable/titlebar_border"
         android:orientation="horizontal">
 
@@ -30,6 +33,7 @@
             android:layout_gravity="center"
             android:hint="@string/title_search"
             android:textAlignment="center"
+            android:background="@null"
             android:textSize="15dp" />
 
 
