--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,75 +18,163 @@
         android:background="#ece6e6"
         app:layout_constraintTop_toBottomOf="@+id/main_titlebar" />
 
-    <HorizontalScrollView
-        android:id="@+id/main_category_scroll"
-        android:layout_width="320dp"
+
+    <LinearLayout
+        android:id="@+id/main_category_layout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scrollbars="none"
+        android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/main_open_category"
         app:layout_constraintTop_toBottomOf="@+id/main_pager">
 
-        <LinearLayout
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_margin="10dp"
+            android:text="인기"
+            android:textSize="15dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="인기"
-                android:textSize="15dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="연애"
+            android:textSize="15dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="연애"
-                android:textSize="15dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="학원"
+            android:textSize="15dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="학원"
-                android:textSize="15dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="무협"
+            android:textSize="15dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="무협"
-                android:textSize="15dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="액션"
+            android:textSize="15dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="액션"
-                android:textSize="15dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="코믹"
+            android:textSize="15dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="코믹"
-                android:textSize="15dp" />
-
-        </LinearLayout>
-    </HorizontalScrollView>
+    </LinearLayout>
 
     <ImageButton
         android:id="@+id/main_open_category"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginRight="2dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginRight="2dp"
         android:layout_marginTop="5dp"
         android:baselineAlignBottom="true"
         android:src="@drawable/ic_open_icon"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_pager" />
+
+    <HorizontalScrollView
+        android:id="@+id/main_contents_scroll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="none"
+        app:layout_constraintTop_toBottomOf="@+id/main_category_layout">
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/main_contents_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <!--<TextView-->
+                <!--android:layout_margin="10dp"-->
+                <!--android:background="#ffdbfc"-->
+                <!--android:text="dummy"-->
+                <!--android:layout_width="150px"-->
+                <!--android:layout_height="180px" />-->
+        </LinearLayout>
+    </HorizontalScrollView>
+
+    <TextView
+        android:id="@+id/main_txt_viewall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="VIEW ALL"
+        app:layout_constraintRight_toLeftOf="@+id/main_category_open_btn"
+        app:layout_constraintTop_toBottomOf="@+id/main_contents_scroll" />
+
+    <ImageButton
+        android:id="@+id/main_category_open_btn"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_margin="5dp"
+        android:src="@drawable/ic_next_icon"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_contents_scroll" />
+
+    <TextView
+        android:id="@+id/main_sub_add_banner"
+        android:background="#b393da"
+        android:text="서브 광고 배너"
+        android:textAlignment="center"
+        android:paddingTop="10dp"
+        android:textSize="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/main_category_open_btn"
+        android:layout_width="match_parent"
+        android:layout_height="40dp" />
+
+    <ImageButton
+        android:src="@drawable/ic_cancel_icon"
+        app:layout_constraintTop_toBottomOf="@+id/main_category_open_btn"
+        app:layout_constraintRight_toRightOf="@+id/main_sub_add_banner"
+        android:layout_marginTop="8dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp" />
+
+    <TextView
+        android:id="@+id/main_newarrival"
+        android:text="NEW ARRIVAL"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/main_sub_add_banner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <HorizontalScrollView
+        android:id="@+id/main_arrival_scroll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="none"
+        app:layout_constraintTop_toBottomOf="@+id/main_newarrival">
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/main_arrival_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <!--<TextView-->
+                <!--android:text="dummy"-->
+                <!--android:background="#ffdbfc"-->
+                <!--android:layout_width="130px"-->
+                <!--android:layout_height="90px" />-->
+        </LinearLayout>
+    </HorizontalScrollView>
+
+    <ImageButton
+        android:id="@+id/main_footer_toon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </android.support.constraint.ConstraintLayout>
