--- a/app/src/main/res/layout/contents_main_works_list.xml
+++ b/app/src/main/res/layout/contents_main_works_list.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/contents_main_list_parent"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/contents_main_list_total_txt"
-        android:text="전체(xx화)"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:text="전체(xx화)" />
 
     <Spinner
         android:id="@+id/contents_main_list_sort"
-        android:text="전체(xx화)"
-        app:layout_constraintRight_toRightOf="parent"
-        android:entries="@array/sort_method"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:entries="@array/sort_method"
+        android:text="전체(xx화)" />
 
     <ListView
         android:id="@+id/contents_main_list_works_list"
-        app:layout_constraintTop_toBottomOf="@+id/contents_main_list_sort"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/contents_main_list_sort" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
