--- a/app/src/main/res/layout/contents_main_works_list_items.xml
+++ b/app/src/main/res/layout/contents_main_works_list_items.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/contents_main_item_linear"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="70dp"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/contents_main_item_image"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="2" />
+        android:layout_gravity="left"
+        android:layout_weight="5" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="4"
+        android:layout_weight="14"
         android:orientation="vertical">
 
         <TextView
@@ -47,9 +49,9 @@
                     android:id="@+id/contents_main_item_watch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_marginLeft="5dp"
                     android:text="New Text"
-                    android:layout_gravity="center"
                     android:textColor="#666666" />
 
             </LinearLayout>
@@ -68,11 +70,11 @@
 
                 <TextView
                     android:id="@+id/contents_main_item_rating"
-                    android:text="10.0"
-                    android:layout_marginLeft="5dp"
-                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="5dp"
+                    android:text="10.0" />
             </LinearLayout>
 
             <LinearLayout
@@ -88,21 +90,21 @@
 
                 <TextView
                     android:id="@+id/contents_main_item_comments_num"
-                    android:text="10.0"
-                    android:layout_marginLeft="5dp"
-                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="5dp"
+                    android:text="10.0" />
             </LinearLayout>
-
         </LinearLayout>
-
     </LinearLayout>
 
     <ImageView
-        android:src="@drawable/ic_money_yellow_24dp"
         android:id="@+id/contents_main_item_cash"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="3"
+        android:src="@drawable/ic_money_yellow_24dp" />
 
 </LinearLayout>
