--- a/app/src/main/res/layout/activity_contents_main.xml
+++ b/app/src/main/res/layout/activity_contents_main.xml
@@ -46,6 +46,7 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/contents_main_first_episode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
