--- a/app/src/main/res/layout/contents_main_works_list_items.xml
+++ b/app/src/main/res/layout/contents_main_works_list_items.xml
@@ -7,26 +7,26 @@
 
     <ImageView
         android:id="@+id/contents_main_item_image"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="left"
-        android:layout_weight="5" />
+        android:layout_height="70dp"
+        android:layout_width="70dp"
+        android:layout_gravity="center"/>
 
     <LinearLayout
+        android:layout_marginLeft="5dp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="14"
+        android:layout_weight="25"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/contents_main_item_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:gravity="center_vertical"
-            android:text="New Text"
-            android:textColor="#000000"
-            android:textSize="24dp" />
+        android:id="@+id/contents_main_item_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:gravity="center_vertical"
+        android:text="New Text"
+        android:textColor="#000000"
+        android:textSize="24dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -104,7 +104,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_weight="3"
+        android:layout_weight="2"
         android:src="@drawable/ic_money_yellow_24dp" />
 
 </LinearLayout>
