--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,12 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#f1fff8">
+
+    <LinearLayout
+        android:id="@+id/login_title_layout"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="#ffffff"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/login_back_btn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:background="@drawable/ic_keyboard_arrow_left_black_24dp" />
+
+        <TextView
+            android:id="@+id/login_login_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:text="로그인"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/login_logo"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_below="@+id/login_title_layout"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/moonlight_02_03" />
+
+    <LinearLayout
+        android:id="@+id/id_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/login_logo"
+        android:layout_centerInParent="true"
+        android:layout_margin="20dp"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/login_user_id"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:hint="이메일을 입력해 주세요"
+            android:inputType="textVisiblePassword"
+            android:background="@drawable/round_border"
+            android:textAlignment="center"
+            android:textSize="12dp" />
+
+        <EditText
+            android:layout_marginTop="10dp"
+            android:id="@+id/login_user_pass"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:hint="비밀번호를 입력해 주세요"
+            android:inputType="textPassword"
+            android:background="@drawable/round_border"
+            android:textAlignment="center"
+            android:textSize="12dp" />
+
+        <TextView
+            android:textSize="10dp"
+            android:textAlignment="center"
+            android:layout_margin="20dp"
+            android:textColor="#ff0000"
+            android:text="가입정보가 없거나 로그인 정보가 잘못 되었습니다."
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/login_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="#7f66a7"
+            android:text="로그인"
+            android:textColor="#ffffff"
+            android:textSize="15dp" />
+
+        <RelativeLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:textColor="#81add6"
+                android:id="@+id/login_find_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="로그인 정보 찾기" />
+
+            <TextView
+                android:textColor="#81add6"
+                android:id="@+id/login_regist_btn"
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="회원가입" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <CheckBox
+        android:id="@+id/auto_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/id_layout"
+        android:layout_alignParentRight="true"
+        android:checked="true"
+        android:text="자동로그인" />
 
     <RelativeLayout
         android:id="@+id/btn_relative_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/auto_login">
 
         <LinearLayout
             android:id="@+id/btn_layout"
@@ -33,106 +152,4 @@
 
     </RelativeLayout>
 
-    <ImageView
-        android:id="@+id/dashline1"
-        android:layout_width="match_parent"
-        android:layout_height="1.5dp"
-        android:layout_below="@+id/btn_relative_layout"
-        android:layout_marginTop="20dp"
-        android:layerType="software"
-        android:src="@drawable/dash_line" />
-
-
-    <LinearLayout
-        android:id="@+id/id_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/dashline1"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="30dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ID"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/login_user_id"
-            android:inputType="textVisiblePassword"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:hint="your ID"
-            android:textAlignment="center" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="Password"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/login_user_pass"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:hint="**********"
-            android:inputType="textPassword"
-            android:textAlignment="center" />
-
-        <RelativeLayout
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <CheckBox
-                android:id="@+id/auto_login"
-                android:checked="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="자동로그인" />
-
-            <TextView
-                android:id="@+id/find"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:text="Id/Password 찾기" />
-        </RelativeLayout>
-
-        <Button
-            android:id="@+id/btn_login"
-            android:layout_width="250dp"
-            android:layout_height="90dp"
-            android:layout_gravity="center"
-            android:background="@drawable/login_img"
-            android:textSize="30dp" />
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/id_layout">
-
-        <ImageView
-            android:id="@+id/dashline2"
-            android:layout_width="match_parent"
-            android:layout_height="1.5dp"
-            android:layout_marginTop="20dp"
-            android:layerType="software"
-            android:src="@drawable/dash_line" />
-
-        <Button
-            android:id="@+id/btn_regist"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="회원가입"
-            android:textSize="30dp" />
-
-    </RelativeLayout>
 </RelativeLayout>
