댓글 페이지 완료 like 데이터베이스 연동 중

--- a/app/src/main/res/layout/contents_main_works_list_items.xml
+++ b/app/src/main/res/layout/contents_main_works_list_items.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:gravity="center_vertical"
-        android:text="New Text"
+        android:text="작품명"
         android:textColor="#000000"
         android:textSize="24dp" />
 
@@ -51,7 +51,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="5dp"
-                    android:text="New Text"
+                    android:text="View Cnt"
                     android:textColor="#666666" />
 
             </LinearLayout>
