--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,27 +82,20 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="2dp"
         android:layout_marginTop="5dp"
-        android:baselineAlignBottom="true"
+        android:layout_marginRight="2dp"
         android:background="@drawable/ic_open_icon"
+        android:baselineAlignBottom="true"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_pager" />
 
-    <HorizontalScrollView
-        android:id="@+id/main_contents_scroll"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/main_category_recycler"
         android:layout_width="match_parent"
+        android:layout_margin="5dp"
         android:layout_height="wrap_content"
-        android:scrollbars="none"
-        app:layout_constraintTop_toBottomOf="@+id/main_category_layout">
-
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/main_contents_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-        </LinearLayout>
-    </HorizontalScrollView>
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/main_category_layout" />
 
     <TextView
         android:id="@+id/main_txt_viewall"
@@ -111,7 +104,7 @@
         android:layout_margin="5dp"
         android:text="VIEW ALL"
         app:layout_constraintRight_toLeftOf="@+id/main_category_open_btn"
-        app:layout_constraintTop_toBottomOf="@+id/main_contents_scroll" />
+        app:layout_constraintTop_toBottomOf="@+id/main_category_recycler" />
 
     <ImageButton
         android:id="@+id/main_category_open_btn"
@@ -120,60 +113,42 @@
         android:layout_margin="5dp"
         android:src="@drawable/ic_next_icon"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_contents_scroll" />
+        app:layout_constraintTop_toBottomOf="@+id/main_category_recycler" />
 
     <TextView
         android:id="@+id/main_sub_add_banner"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
         android:background="#b393da"
+        android:paddingTop="10dp"
         android:text="서브 광고 배너"
         android:textAlignment="center"
-        android:paddingTop="10dp"
         android:textSize="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/main_category_open_btn"
-        android:layout_width="match_parent"
-        android:layout_height="40dp" />
+        app:layout_constraintTop_toBottomOf="@+id/main_category_open_btn" />
 
     <ImageButton
-        android:src="@drawable/ic_cancel_icon"
-        app:layout_constraintTop_toBottomOf="@+id/main_category_open_btn"
-        app:layout_constraintRight_toRightOf="@+id/main_sub_add_banner"
-        android:layout_marginTop="8dp"
         android:layout_width="24dp"
-        android:layout_height="24dp" />
+        android:layout_height="24dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/ic_cancel_icon"
+        app:layout_constraintRight_toRightOf="@+id/main_sub_add_banner"
+        app:layout_constraintTop_toBottomOf="@+id/main_category_open_btn" />
 
     <TextView
-        android:id="@+id/main_newarrival"
+        android:id="@+id/main_newarrival_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="NEW ARRIVAL"
         android:textSize="20dp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/main_sub_add_banner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        app:layout_constraintTop_toBottomOf="@id/main_sub_add_banner" />
 
-    <HorizontalScrollView
-        android:id="@+id/main_arrival_scroll"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/main_arrival_recycler"
         android:layout_width="match_parent"
+        android:layout_margin="5dp"
         android:layout_height="wrap_content"
-        android:scrollbars="none"
-        app:layout_constraintTop_toBottomOf="@+id/main_newarrival">
-
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/main_arrival_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <!--<TextView-->
-                <!--android:text="dummy"-->
-                <!--android:background="#ffdbfc"-->
-                <!--android:layout_width="130px"-->
-                <!--android:layout_height="90px" />-->
-        </LinearLayout>
-    </HorizontalScrollView>
-
-    <ImageButton
-        android:id="@+id/main_footer_toon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/main_newarrival_text" />
 
 </android.support.constraint.ConstraintLayout>
