--- a/app/src/main/res/layout/mainpage_custom_title_bar.xml
+++ b/app/src/main/res/layout/mainpage_custom_title_bar.xml
@@ -7,7 +7,7 @@
 
     <ImageView
         android:id="@+id/title_logo"
-        android:layout_width="50dp"
+        android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
@@ -18,12 +18,13 @@
         android:id="@+id/title_search_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
+        android:background="@drawable/titlebar_border"
+        android:layout_toLeftOf="@id/title_mypage_btn"
+        android:layout_toRightOf="@+id/title_logo"
+        android:layout_marginRight="10dp"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/titlebar_border"
         android:orientation="horizontal">
 
         <EditText
@@ -31,42 +32,30 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="@null"
             android:hint="@string/title_search"
             android:textAlignment="center"
-            android:background="@null"
             android:textSize="15dp" />
 
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
 
         <ImageButton
             android:id="@+id/title_search_btn"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_gravity="center"
             android:src="@drawable/ic_search_icon" />
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <Button
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_gravity="center"
+        android:id="@+id/title_mypage_btn"
         android:layout_marginRight="10dp"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/title_money_btn"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginRight="5dp"
-            android:background="@drawable/ic_money_icon" />
-
-        <Button
-            android:id="@+id/title_mypage_btn"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:background="@drawable/ic_person_icon" />
-    </LinearLayout>
-
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:background="@drawable/ic_person_icon" />
 </RelativeLayout>
